--- a/styles/header.css
+++ b/styles/header.css
@@ -58,13 +58,6 @@
   color: #92989c;
 }
 
-/* .search-label {
-  color: rgb(145, 140, 140);
-  background-color: var(--primary);
-  padding: 13px;
-  cursor: pointer;
-} */
-
 .search-imput-box.open {
   display: block;
 }
@@ -77,7 +70,7 @@
   display: none;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   .turn-on-search {
     display: block;
     color: rgb(145, 140, 140);
@@ -124,6 +117,7 @@
     display: block;
     color: rgb(145, 140, 140);
   }
+
   .burger {
     display: block;
     color: rgb(145, 140, 140);
@@ -132,7 +126,7 @@
   }
 }
 
-@media (max-width: 475px) {
+@media (max-width: 500px) {
   .greeting {
     font-weight: 500;
     font-size: 30px;
@@ -149,7 +143,6 @@
 
 @media (max-width: 440px) {
   .greeting {
-    font-weight: 500;
     font-size: 28px;
   }
 
@@ -162,9 +155,8 @@
   }
 }
 
-@media (max-width: 385px) {
+@media (max-width: 405px) {
   .greeting {
-    font-weight: 500;
     font-size: 26px;
   }
 
@@ -177,17 +169,20 @@
   }
 }
 
-@media (max-width: 365px) {
+@media (max-width: 390px) {
   .greeting {
-    font-weight: 500;
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 370px) {
+  .greeting {
     font-size: 22px;
   }
+}
 
-  .burger {
-    font-size: 16px;
-  }
-
-  .turn-on-search {
-    font-size: 14px;
+@media (max-width: 345px) {
+  .greeting {
+    font-size: 20px;
   }
 }
